--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Practicalized DOM</title>
+    <title>Practicalized dom</title>
 </head>
 <body>
     <div class="product-card">
